--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,24 @@
-version: '3.1'
+version: '3.8'
 
 services:
-  db:
-    image: postgres:15
+  postgres:
+    image: postgres:latest
     container_name: postgres_db
     environment:
       POSTGRES_USER: user
       POSTGRES_PASSWORD: pass
       POSTGRES_DB: pg_db
-    volumes:
-      - ./postgres-data:/var/lib/postgresql/data
+      POSTGRES_HOST_METHOD: trust
     ports:
       - "5432:5432"
+    volumes:
+      - ./postgres-data:/var/lib/postgresql/data
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready - U root" ]
+      interval: 10s
+      timeout: 30s
+      retries: 5
+      start_period: 30s
+
+  volumes:
+    postgres_data:
