--- a/back/pom.xml
+++ b/back/pom.xml
@@ -39,6 +39,10 @@
             <artifactId>quarkus-rest</artifactId>
         </dependency>
         <dependency>
+    <groupId>io.quarkus</groupId>
+    <artifactId>quarkus-jdbc-postgresql</artifactId>
+</dependency>
+        <dependency>
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-junit5</artifactId>
             <scope>test</scope>
