refactor: Update docker-compose.yml for CryptoViz project

--- a/data_flow/docker-compose.yml
+++ b/data_flow/docker-compose.yml
@@ -16,6 +16,25 @@ services:
       KAFKA_LISTENERS: INSIDE://0.0.0.0:9093,OUTSIDE://0.0.0.0:9092
       KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_CREATE_TOPICS: "my-topic:1:1"
+      KAFKA_CREATE_TOPICS: "crypto_viz:1:1"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+
+  postgres:
+    image: postgres:13
+    environment:
+      POSTGRES_DB: cryptoviz
+      POSTGRES_USER: root
+      POSTGRES_PASSWORD: examplepassword
+    ports:
+      - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U root"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+
+volumes:
+  postgres-data:
