--- a/data_flow/requirements.txt
+++ b/data_flow/requirements.txt
@@ -1,4 +1,7 @@
 requests==2.31.0
 beautifulsoup4==4.12.2
 kafka-python==2.0.2
+kafka-python-ng==2.2.3
 psycopg2==2.9.3
+schedule==1.2.2
+sqlalchemy==2.0.36
