working test websocket

--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -4,3 +4,5 @@ quarkus.datasource.password=postgres
 
 quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/db
 quarkus.datasource.jdbc.max-size=16
+
+quarkus.http.port=8080
