--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 quarkus.datasource.db-kind=postgresql 
 quarkus.datasource.username=neondb_owner
 quarkus.datasource.password=5gmU2dCPtKjS
+
 quarkus.datasource.jdbc.url=jdbc:postgresql://ep-blue-sun-a2wenv9g.eu-central-1.aws.neon.tech/neondb?sslmode=require
 quarkus.datasource.jdbc.max-size=16
+
 quarkus.http.port=8080
+quarkus.websockets-next.client.traffic-logging.enabled=true
+quarkus.websockets-next.server.traffic-logging.enabled=false
