refactor: update websocket implementation and clean up unused code; modify database connection settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
   "java.configuration.updateBuildConfiguration": "automatic",
-  "java.compile.nullAnalysis.mode": "automatic"
-
+  "java.compile.nullAnalysis.mode": "automatic",
+  "yaml.schemas": {
+    "https://www.artillery.io/schema.json": []
+  }
 }
