--- a/data_flow/docker-compose.yml
+++ b/data_flow/docker-compose.yml
@@ -35,7 +35,19 @@ services:
       retries: 5
     volumes:
       - postgres-data:/var/lib/postgresql/data
+  grafana:
+    image: grafana/grafana:latest
+    ports:
+      - "3000:3000"
+    environment:
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+    volumes:
+      - grafana-data:/var/lib/grafana
+    depends_on:
+      - postgres
 
 volumes:
   postgres-data:
+  grafana-data:
 
