feat(front): :construction: sorting in data table

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,5 +14,9 @@
       "database": "cryptoviz",
       "username": "root"
     }
+  ],
+  "conventionalCommits.scopes": [
+    "data-table",
+    "front"
   ]
 }
