--- a/data_flow/docker-compose.yml
+++ b/data_flow/docker-compose.yml
@@ -3,15 +3,15 @@ services:
     image: wurstmeister/zookeeper:latest
     ports:
       - "2181:2181"
+    networks:
+      - app-network
 
   kafka:
     image: wurstmeister/kafka:latest
     ports:
       - "9092:9092"
-    expose:
-      - "9093"
     environment:
-      KAFKA_ADVERTISED_LISTENERS: INSIDE://kafka:9093,OUTSIDE://localhost:9092
+      KAFKA_ADVERTISED_LISTENERS: INSIDE://kafka:9093,OUTSIDE://host.docker.internal:9092
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INSIDE:PLAINTEXT,OUTSIDE:PLAINTEXT
       KAFKA_LISTENERS: INSIDE://0.0.0.0:9093,OUTSIDE://0.0.0.0:9092
       KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
@@ -19,6 +19,10 @@ services:
       KAFKA_CREATE_TOPICS: "crypto_viz:1:1"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+    depends_on:
+      - zookeeper
+    networks:
+      - app-network
 
   postgres:
     image: postgres:13
@@ -35,6 +39,9 @@ services:
       retries: 5
     volumes:
       - postgres-data:/var/lib/postgresql/data
+    networks:
+      - app-network
+
   grafana:
     image: grafana/grafana:latest
     ports:
@@ -46,8 +53,30 @@ services:
       - grafana-data:/var/lib/grafana
     depends_on:
       - postgres
+    networks:
+      - app-network
 
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "5000:5000"
+    environment:
+      KAFKA_BROKER: kafka:9093
+      POSTGRES_HOST: postgres
+      POSTGRES_DB: cryptoviz
+      POSTGRES_USER: root
+      POSTGRES_PASSWORD: examplepassword
+    depends_on:
+      - kafka
+      - postgres
+    networks:
+      - app-network
 volumes:
   postgres-data:
   grafana-data:
 
+networks:
+  app-network:
+    driver: bridge
