--- a/data_flow/requirements.txt
+++ b/data_flow/requirements.txt
@@ -1,10 +1,12 @@
-requests==2.32.3
+alembic==1.14.0
 beautifulsoup4==4.12.2
-kafka-python==2.0.2
-kafka-python-ng==2.2.3
-schedule==1.2.2
-sqlalchemy==2.0.36
 bs4==0.0.2
 kafka==1.3.5
+kafka-python==2.0.2
+kafka-python-ng==2.2.3
 psycopg2-binary==2.9.10
+requests==2.32.3
 schedule==1.2.2
+SQLAlchemy==2.0.36
+urllib3==2.3.0
+python-dotenv==1.0.1
