Fix: connection back and front

--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -9,3 +9,5 @@ quarkus.http.port=8080
 quarkus.websockets-next.client.traffic-logging.enabled=true
 quarkus.websockets-next.server.traffic-logging.enabled=false
 
+quarkus.http.cors=true
+quarkus.http.cors.origins=*
