--- a/data_flow/docker-compose.yml
+++ b/data_flow/docker-compose.yml
@@ -1,10 +1,16 @@
 services:
+
   zookeeper:
     image: wurstmeister/zookeeper:latest
     ports:
-      - "2181:2181"
+      - "2181:2181" # Default Zookeeper port
+      - "7070:7070" # JMX Exporter port
+    environment:
+      - ZOOKEEPER_JMXPORT=7070
+      - ZOOKEEPER_JMXHOSTNAME=0.0.0.0
     networks:
       - app-network
+
 
   kafka:
     image: wurstmeister/kafka:latest
@@ -42,6 +48,29 @@ services:
     networks:
       - app-network
 
+  postgres-exporter:
+    image: bitnami/postgres-exporter:latest
+    environment:
+      DATA_SOURCE_URI: postgresql://root:examplepassword@postgres:5432/cryptoviz?sslmode=disable
+    ports:
+      - "9187:9187"
+    depends_on:
+      - postgres
+    networks:
+      - app-network
+
+
+  kafka-exporter:
+    image: danielqsj/kafka-exporter:latest
+    ports:
+      - "9308:9308"
+    environment:
+      KAFKA_BROKERS: kafka:9092
+    depends_on:
+      - kafka
+    networks:
+      - app-network
+
   grafana:
     image: grafana/grafana:latest
     ports:
@@ -53,6 +82,18 @@ services:
       - grafana-data:/var/lib/grafana
     depends_on:
       - postgres
+    networks:
+      - app-network
+
+  prometheus:
+    image: prom/prometheus:latest
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    depends_on:
+      - kafka
+      - zookeeper
     networks:
       - app-network
 
@@ -73,6 +114,7 @@ services:
       - postgres
     networks:
       - app-network
+
 volumes:
   postgres-data:
   grafana-data:
