--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -10,9 +10,11 @@ jobs:
     steps:
       - name: Checkout repository code
         uses: actions/checkout@v2
-        
-      - name: Set up Docker Compose
-        uses: docker/setup-compose@v2
+
+      - name: Install Docker Compose
+        run: |
+          sudo curl -L "https://github.com/docker/compose/releases/download/v2.20.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+          sudo chmod +x /usr/local/bin/docker-compose
 
       - name: Build the image
         run: cd data_flow && docker-compose build
