feat: :sparkles: Add healthcheck for Kafka service in Docker Compose

--- a/data_flow/docker-compose.yml
+++ b/data_flow/docker-compose.yml
@@ -42,8 +42,6 @@ services:
     networks:
       - app-network
 
-
-
   app:
     build:
       context: .
@@ -61,6 +59,7 @@ services:
       - postgres
     networks:
       - app-network
+    restart: on-failure:5
 volumes:
   postgres-data:
   grafana-data:
