--- a/data_flow/requirements.txt
+++ b/data_flow/requirements.txt
@@ -10,3 +10,6 @@ schedule==1.2.2
 SQLAlchemy==2.0.36
 urllib3==2.3.0
 python-dotenv==1.0.1
+fastapi[standard]==0.115.7
+uvicorn[standard]
+prometheus_client==0.16.0
