--- a/monitoring/docker-compose.yml
+++ b/monitoring/docker-compose.yml
@@ -1,3 +1,5 @@
+services:
+
   grafana:
     image: grafana/grafana:latest
     ports:
@@ -7,7 +9,44 @@
       - GF_SECURITY_ADMIN_PASSWORD=admin
     volumes:
       - grafana-data:/var/lib/grafana
-    depends_on:
-      - postgres
+
     networks:
       - app-network
+
+  prometheus:
+    image: prom/prometheus:latest
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    networks:
+      - app-network
+
+
+
+  postgres-exporter:
+    image: bitnami/postgres-exporter:latest
+    environment:
+      DATA_SOURCE_URI: postgresql://root:examplepassword@postgres:5432/cryptoviz?sslmode=disable
+    ports:
+      - "9187:9187"
+    networks:
+      - app-network
+
+
+  kafka-exporter:
+    image: danielqsj/kafka-exporter:latest
+    ports:
+      - "9308:9308"
+    environment:
+      KAFKA_BROKERS: kafka:9092
+    networks:
+      - app-network
+
+
+volumes:
+  grafana-data:
+
+networks:
+  app-network:
+    external: true
