--- a/data_flow/requirements.txt
+++ b/data_flow/requirements.txt
@@ -1,12 +1,15 @@
 alembic==1.14.0
-beautifulsoup4==4.12.2
 bs4==0.0.2
 kafka==1.3.5
 kafka-python==2.0.2
 kafka-python-ng==2.2.3
 psycopg2-binary==2.9.10
-requests==2.32.3
 schedule==1.2.2
 SQLAlchemy==2.0.36
 urllib3==2.3.0
 python-dotenv==1.0.1
+requests>=2.31.0
+beautifulsoup4>=4.12.0
+fake-useragent==1.4.0
+selenium==4.17.2
+webdriver-manager==4.0.1
